<resources>
    <string name="app_name">SignIn</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="invalid_username">Invalid Username. Only Character.</string>
    <string name="invalid_email">Enter valid email address</string>
    <string name="invalid_password">At least 6 digits</string>
    <string name="password_not_match">Passwords dont match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify">Verify</string>
    <string name="go_back_to_sign_in">Go back to sign in</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="textview">TextView</string>
    <string name="leave">Leave</string>
</resources>